Исправил точки в конце

--- a/src/restore-password.mjml
+++ b/src/restore-password.mjml
@@ -13,7 +13,7 @@
                     {$login}, здравствуйте! На сайте {$site_name} сделан запрос на восстановление пароля. Если вы не делали данный запрос, проигнорируйте данное письмо
                 </mj-text>
                 <mj-text font-size='16px' line-height='24px' >                    
-                    Если это были Вы, то пройдите по ссылке ниже и придумайте новый пароль.
+                    Если это были Вы, то пройдите по ссылке ниже и придумайте новый пароль:
                 </mj-text>
             </mj-column>
         </mj-section>
