--- a/src/password-change.mjml
+++ b/src/password-change.mjml
@@ -13,7 +13,7 @@
                     {$login}, здравствуйте! Ваш пароль на сайте {$site_name} успешно изменен.
                 </mj-text>
                 <mj-text font-size='16px' line-height='24px' >                    
-                    Вы можете перейти в личный кабинет по ссылке.
+                    Вы можете перейти в личный кабинет по ссылке:
                 </mj-text>
             </mj-column>
         </mj-section>
