--- a/src/components/header.mjml
+++ b/src/components/header.mjml
@@ -8,7 +8,7 @@
 <mj-section>
     <mj-column  background-color='#1F2326' width="100%">  
         <mj-text>
-            <a href="#"><img src="https://i.ibb.co/HH7c8gx/logo.png" alt="logo" border="0" /></a>
+            <a href="#"><img align="center" src="https://i.postimg.cc/1zFR8dMp/Left-content.png" alt="logo" border="0" /></a>
         </mj-text>
     </mj-column>
 </mj-section>  
